--- a/flexdashboard_pavia.Rmd
+++ b/flexdashboard_pavia.Rmd
@@ -16,7 +16,6 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, comment = "", dev = "svglite", fig.ext = ".svg")
-
 # Libraries
 library(flexdashboard)
 library(htmlwidgets)
@@ -26,24 +25,18 @@ library(ggplot2)
 library(svglite)
 library(plotly)
 library(DT)
-
 # Data
 DT <- readRDS("data/DT.rds")
 DTS <- readRDS("data/DTS.rds")
 DTE <- readRDS("data/DTE_pavia.rds")
-
-
 # javascript (clickable datapoints url)
 # https://stackoverflow.com/questions/51681079/how-to-make-scatterplot-points-open-a-hyperlink-using-ggplotly-r
-
 js <- "function(el, x) {
   el.on('plotly_click', function(d) {
     var link = d.points[0].customdata;
     window.open(link);
   });
 }"
-
-
 # Functions
 loj <- function (X = NULL, Y = NULL, onCol = NULL) {
   if (truelength(X) == 0 | truelength(Y) == 0) 
@@ -68,6 +61,7 @@ $(document).ready(function(){
 # Sidebar {data-width=80, .sidebar}
 <ul id="sidebar_ul">
   <li><a href="https://cnftstats.github.io/bcrc.html">BCRC</a></li>
+  <li><a href="https://cnftstats.github.io/borgs.html">BorgsClub</a></li>
   <li><a href="https://cnftstats.github.io/chilledkongs.html">ChilledKongs</a></li>
   <li><a href="https://cnftstats.github.io/mocossi.html">Mocossi</a></li>
   <li id="currentProject"><a href="https://cnftstats.github.io/pavia.html">Pavia</a></li>
@@ -88,17 +82,14 @@ X[price %between% c(2000, 14999), price_range := trunc(price/1000)*1000]
 X[price >= 15000, price_range := 15000]
 X <- X[complete.cases(price_range), .(price_range, market)]
 num_listings <- nrow(X)
-
 X <- X[, .N, .(price_range, market)][order(price_range)]
 X[price_range %between% c(0, 999),      x_label := paste0(price_range, "-", price_range + (50-1))]
 X[price_range %between% c(1000, 1999),  x_label := paste0(price_range, "-", price_range + (100-1))]
 X[price_range %between% c(2000, 14999), x_label := paste0(price_range, "-", price_range + (1000-1))]
 X[price_range >= 15000,                 x_label := "15000+"]
-
 .X <- X[, .(price_range, x_label)] %>% unique %>% .[order(price_range)]
 X[, x_label := factor(x_label, levels = .X$x_label)]
 X[, market := factor(market, levels = c("jpg.store", "cnft.io"))]
-
 ggplot(X, aes(x_label, N, fill = market)) +
   geom_bar(stat = "identity", alpha = .9) +
   geom_text(aes(label = stat(y), group = x_label),
@@ -131,9 +122,7 @@ ggplot(X, aes(x_label, N, fill = market)) +
 .data_date_after <- .data_dates[!(.data_dates %in% .data_date_now)]
 .data_date_after_hours <- difftime(.data_date_now, .data_date_after, units = "hours")
 .enoughData <- ifelse(all(.data_date_after_hours < .hours_ago), FALSE, TRUE)
-
 if(!.enoughData) cat("Not enough data at the moment, please come back later.")
-
 # Find data date collection closest to one hour after the first data collection
 .data_date_next <- .data_date_after[which.min(abs(.data_date_after_hours - .hours_ago))]
 .diff_minutes_now_next <- difftime(.data_date_now, .data_date_next, units = "mins")
@@ -145,33 +134,27 @@ X[, data_when := fcase(
   data_date == .data_date_now, "Now",
   data_date == .data_date_next, sprintf("About %sh ago", .hours_ago)
 )]
-
 data_when_order <- X[order(-data_date), unique(data_when)]
 X[, data_when := factor(data_when, levels = data_when_order)]
-
 X[price %between% c(0, 999),     price_range := trunc(price/50)*50]
 X[price %between% c(1000, 1999), price_range := trunc(price/100)*100]
 X[price %between% c(2000, 14999), price_range := trunc(price/1000)*1000]
 X[price >= 15000, price_range := 15000]
 X <- X[complete.cases(price_range), .(price_range, price, market, data_when)]
-
 CAP <- X[, .(floor = min(price), listings = .N), data_when]
 .caption <- paste0(
   sprintf("Now: Floor = %s | Listings = %s", CAP[1, floor], CAP[1, listings]),
   sprintf("\n%sh ago: Floor = %s | Listings = %s", .hours_ago, CAP[2, floor], CAP[2, listings]),
   "\nSource: https://cnftstats.github.io/"
 )
-
 X <- X[, .N, .(price_range, market, data_when)][order(price_range)]
 X[price_range %between% c(0, 999),      x_label := paste0(price_range, "-", price_range + (50-1))]
 X[price_range %between% c(1000, 1999),  x_label := paste0(price_range, "-", price_range + (100-1))]
 X[price_range %between% c(2000, 14999), x_label := paste0(price_range, "-", price_range + (1000-1))]
 X[price_range >= 15000,                 x_label := "15000+"]
-
 .X <- X[, .(price_range, x_label)] %>% unique %>% .[order(price_range)]
 X[, x_label := factor(x_label, levels = .X$x_label)]
 X[, market  := factor(market, levels = c("jpg.store", "cnft.io"))]
-
 ggplot(X, aes(x_label, N, fill = market, alpha = data_when)) +
   facet_grid(data_when~.) +
   geom_bar(stat = "identity") +
@@ -206,24 +189,20 @@ X[price %between% c(1000, 1999), price_range := trunc(price/100)*100]
 X[price %between% c(2000, 14999), price_range := trunc(price/1000)*1000]
 X[price >= 15000, price_range := 15000]
 X <- X[complete.cases(price_range), .(price_range, price, market, sold_time)]
-
 CAP <- X[, .(sale_range = sprintf("%s-%s", min(price), max(price)),
              sales = .N, volume = sum(price)/1000), sold_time]
 .caption <- paste0(sprintf("0-24h ago: Sales = %s | Volume = %.0fk", CAP[1, sales], CAP[1, volume]),
                    sprintf("\n24-48h ago: Sales = %s | Volume = %.0fk", CAP[2, sales], CAP[2, volume]),
                    sprintf("\n48-72h ago: Sales = %s | Volume = %.0fk",CAP[3, sales], CAP[3, volume]),
                    "\nSource: https://cnftstats.github.io/")
-
 X <- X[, .N, .(price_range, market, sold_time)][order(price_range)]
 X[price_range %between% c(0, 999),      x_label := paste0(price_range, "-", price_range + (50-1))]
 X[price_range %between% c(1000, 1999),  x_label := paste0(price_range, "-", price_range + (100-1))]
 X[price_range %between% c(2000, 14999), x_label := paste0(price_range, "-", price_range + (1000-1))]
 X[price_range >= 15000,                 x_label := "15000+"]
-
 .X <- X[, .(price_range, x_label)] %>% unique %>% .[order(price_range)]
 X[, x_label := factor(x_label, levels = .X$x_label)]
 X[, market := factor(market, levels = c("jpg.store", "cnft.io"))]
-
 ggplot(X, aes(x_label, N, fill = market, alpha = sold_time)) +
   facet_grid(sold_time~.) +
   geom_hline(yintercept = 0, color = "grey70") +
@@ -257,7 +236,6 @@ X <- DT[order(price)][1:30]
 X[, asset := sprintf("<a href='%s' target='_blank'>%s</a>", link, asset)]
 X <- X[, .(asset, price, sc, market)]
 X <- X[complete.cases(X)]
-
 datatable(X, class = 'compact stripe hover nowrap',
           options = list(dom = "t",
                          pageLength = 100,
@@ -672,3 +650,16 @@ Tips would also be greatly appreciated! This would encourage me to maintain and 
 
 <!-- https://ionic.io/ionicons/v2/cheatsheet.html -->
 <!-- https://www.qrcode-monkey.com/#text -->
+© 2022 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+Loading complete
